src/components/TokenInput.scss
@import "../styles/theme.scss";

div.tokenInput {
  display: flex;
  position: relative;
  align-items: center;

  input {
    position: absolute;
    left: 60px;
    width: 258px;
    height: 32px;
    display: block;
    background: $white;
    border: none;
    border-radius: 0;
    margin-left: 16px;

    padding-left: 16px;
    color: $text-black;
    font-size: 16px;
    font-family: $font-family;
    font-style: normal;
    font-weight: $normal;

    &:focus {
      outline: none;
    }
  }

  span {
    line-height: 40px;
  }

  img {
    margin-right: 8px;
    vertical-align: text-bottom;
  }

  button.max {
    position: absolute;
    right: 16px;
    z-index: 1;
    height: 32px;
    color: $text-red;
    background: none !important;
    border: none;
    font-weight: $medium;
    letter-spacing: -0.06em;
    cursor: pointer;
    text-decoration: underline;

    &:hover {
      font-weight: $bold;
    }

    &:focus {
      outline: none;
    }
  }
}

